@@ -2,7 +2,9 @@ package com.example;
 
 
 import java.util.Arrays;
+import java.util.List;
 
+import com.example.entity.Roles;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
@@ -25,26 +27,26 @@ public class ExampleApplication {
     public CommandLineRunner init(UserMapper userMapper, PasswordEncoder encoder) {
         return args -> {
         	String userId = "user123";
-        	User existingUser = userMapper.findByUserId(userId);
+        	User existingUser = userMapper.findByLoginId(userId);
         	if (existingUser == null) {
                 User user = new User();
-                user.setUserId(userId);
+                user.setLoginId(userId);
                 user.setUserName("테스트사용자");
                 user.setPassword(encoder.encode("1234"));
-                user.setRoles(Arrays.asList("ROLE_USER"));
+                user.setRoles(List.of(new Roles("ROLE_USER")));
                 
                 userMapper.insertUser(user);
                 System.out.println("초기 사용자 생성 완료!");
             }
         	
         	userId = "admin123";
-        	existingUser = userMapper.findByUserId(userId);
+        	existingUser = userMapper.findByLoginId(userId);
         	if (existingUser == null) {
                 User user = new User();
-                user.setUserId(userId);
+                user.setLoginId(userId);
                 user.setUserName("테스트관리자");
                 user.setPassword(encoder.encode("1234"));
-                user.setRoles(Arrays.asList("ROLE_ADMIN"));
+                user.setRoles(List.of(new Roles("ROLE_ADMIN")));
                 user.setActive(true);
                 
                 userMapper.insertUser(user);
